--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -380,311 +380,311 @@ main {
     transform-origin: bottom left
 }
 
-.modal-open {
-    overflow: hidden
-}
+/*.modal-open {*/
+/*    overflow: hidden*/
+/*}*/
 
-.modal-open .modal {
-    overflow-x: hidden;
-    overflow-y: auto
-}
+/*.modal-open .modal {*/
+/*    overflow-x: hidden;*/
+/*    overflow-y: auto*/
+/*}*/
 
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1050;
-    display: none;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    outline: 0
-}
+/*.modal {*/
+/*    position: fixed;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    z-index: 1050;*/
+/*    display: none;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    overflow: hidden;*/
+/*    outline: 0*/
+/*}*/
 
-.modal-dialog {
-    position: relative;
-    pointer-events: none;
-    max-width: 515px;
-    margin: .5rem auto
-}
+/*.modal-dialog {*/
+/*    position: relative;*/
+/*    pointer-events: none;*/
+/*    max-width: 515px;*/
+/*    margin: .5rem auto*/
+/*}*/
 
-.modal-dialog.modal-dialog-big {
-    max-width: 920px
-}
+/*.modal-dialog.modal-dialog-big {*/
+/*    max-width: 920px*/
+/*}*/
 
-.modal-dialog-centered {
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    min-height: calc(100% - (.5rem * 2));
-    margin: .5rem auto
-}
+/*.modal-dialog-centered {*/
+/*    display: -ms-flexbox;*/
+/*    display: -webkit-flex;*/
+/*    display: flex;*/
+/*    -ms-flex-align: center;*/
+/*    -webkit-align-items: center;*/
+/*    align-items: center;*/
+/*    min-height: calc(100% - (.5rem * 2));*/
+/*    margin: .5rem auto*/
+/*}*/
 
-.modal-backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1040;
-    width: 100vw;
-    height: 100vh;
-    background-color: #004990;
-    transition-duration: .2s
-}
+/*.modal-backdrop {*/
+/*    position: fixed;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    z-index: 1040;*/
+/*    width: 100vw;*/
+/*    height: 100vh;*/
+/*    background-color: #004990;*/
+/*    transition-duration: .2s*/
+/*}*/
 
-.modal-backdrop.fade {
-    opacity: 0
-}
+/*.modal-backdrop.fade {*/
+/*    opacity: 0*/
+/*}*/
 
-.modal-backdrop.show {
-    opacity: .7
-}
+/*.modal-backdrop.show {*/
+/*    opacity: .7*/
+/*}*/
 
-.modal button.close {
-    position: absolute;
-    top: 17px;
-    right: 7px;
-    width: 21px;
-    height: 21px;
-    margin: 0;
-    opacity: 1;
-    background: #fff;
-    border: none;
-    border-radius: 50%;
-    z-index: 10;
-    transition-duration: .2s;
-    font-family: "Proxima Nova Condensed";
-    font-weight: 900;
-    font-style: italic;
-    font-size: 28px;
-    text-align: center;
-    line-height: 21px;
-    color: #c51437;
-    padding-top: 1px;
-    padding-right: 1px
-}
+/*.modal button.close {*/
+/*    position: absolute;*/
+/*    top: 17px;*/
+/*    right: 7px;*/
+/*    width: 21px;*/
+/*    height: 21px;*/
+/*    margin: 0;*/
+/*    opacity: 1;*/
+/*    background: #fff;*/
+/*    border: none;*/
+/*    border-radius: 50%;*/
+/*    z-index: 10;*/
+/*    transition-duration: .2s;*/
+/*    font-family: "Proxima Nova Condensed";*/
+/*    font-weight: 900;*/
+/*    font-style: italic;*/
+/*    font-size: 28px;*/
+/*    text-align: center;*/
+/*    line-height: 21px;*/
+/*    color: #c51437;*/
+/*    padding-top: 1px;*/
+/*    padding-right: 1px*/
+/*}*/
 
-.modal button.close:hover {
-    opacity: .9
-}
+/*.modal button.close:hover {*/
+/*    opacity: .9*/
+/*}*/
 
-.modal-content {
-    position: relative;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -ms-flex-direction: column;
-    -webkit-flex-direction: column;
-    flex-direction: column;
-    width: 100%;
-    pointer-events: auto;
-    background-clip: padding-box;
-    outline: 0
-}
+/*.modal-content {*/
+/*    position: relative;*/
+/*    display: -ms-flexbox;*/
+/*    display: -webkit-flex;*/
+/*    display: flex;*/
+/*    -ms-flex-direction: column;*/
+/*    -webkit-flex-direction: column;*/
+/*    flex-direction: column;*/
+/*    width: 100%;*/
+/*    pointer-events: auto;*/
+/*    background-clip: padding-box;*/
+/*    outline: 0*/
+/*}*/
 
-.modal-content:after, .modal-content:before {
-    content: "";
-    position: absolute;
-    border-radius: 20px;
-    -webkit-transform-origin: center center;
-    -ms-transform-origin: center center;
-    transform-origin: center center
-}
+/*.modal-content:after, .modal-content:before {*/
+/*    content: "";*/
+/*    position: absolute;*/
+/*    border-radius: 20px;*/
+/*    -webkit-transform-origin: center center;*/
+/*    -ms-transform-origin: center center;*/
+/*    transform-origin: center center*/
+/*}*/
 
-.modal-content:before {
-    top: -8px;
-    bottom: -8px;
-    left: -9px;
-    right: -9px;
-    z-index: 1;
-    background: #fff;
-    -webkit-transform: skew(1deg, -.3deg);
-    -ms-transform: skew(1deg, -.3deg);
-    transform: skew(1deg, -.3deg)
-}
+/*.modal-content:before {*/
+/*    top: -8px;*/
+/*    bottom: -8px;*/
+/*    left: -9px;*/
+/*    right: -9px;*/
+/*    z-index: 1;*/
+/*    background: #fff;*/
+/*    -webkit-transform: skew(1deg, -.3deg);*/
+/*    -ms-transform: skew(1deg, -.3deg);*/
+/*    transform: skew(1deg, -.3deg)*/
+/*}*/
 
-.modal-content:after {
-    left: -1px;
-    right: -1px;
-    top: 5px;
-    bottom: 5px;
-    z-index: 3;
-    background: #004990;
-    -webkit-transform: skewY(.8deg);
-    -ms-transform: skewY(.8deg);
-    transform: skewY(.8deg)
-}
+/*.modal-content:after {*/
+/*    left: -1px;*/
+/*    right: -1px;*/
+/*    top: 5px;*/
+/*    bottom: 5px;*/
+/*    z-index: 3;*/
+/*    background: #004990;*/
+/*    -webkit-transform: skewY(.8deg);*/
+/*    -ms-transform: skewY(.8deg);*/
+/*    transform: skewY(.8deg)*/
+/*}*/
 
-.modal-content > div {
-    position: relative;
-    z-index: 5
-}
+/*.modal-content > div {*/
+/*    position: relative;*/
+/*    z-index: 5*/
+/*}*/
 
-.modal-content .h2, .modal-content h2 {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 25px;
-    font-family: "Futura New", sans-serif;
-    font-weight: 800;
-    font-style: italic;
-    margin: 0 0 .8em;
-    line-height: 1.3em;
-    color: #fff
-}
+/*.modal-content .h2, .modal-content h2 {*/
+/*    text-align: center;*/
+/*    text-transform: uppercase;*/
+/*    font-size: 25px;*/
+/*    font-family: "Futura New", sans-serif;*/
+/*    font-weight: 800;*/
+/*    font-style: italic;*/
+/*    margin: 0 0 .8em;*/
+/*    line-height: 1.3em;*/
+/*    color: #fff*/
+/*}*/
 
-.modal-content .h2.warning, .modal-content h2.warning {
-    color: #ffe512
-}
+/*.modal-content .h2.warning, .modal-content h2.warning {*/
+/*    color: #ffe512*/
+/*}*/
 
-.modal-content .h2.danger, .modal-content h2.danger {
-    margin: 0;
-    color: #c51437;
-    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff
-}
+/*.modal-content .h2.danger, .modal-content h2.danger {*/
+/*    margin: 0;*/
+/*    color: #c51437;*/
+/*    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff*/
+/*}*/
 
-.modal-content .h3, .modal-content h3 {
-    text-align: center;
-    text-transform: none;
-    font-size: 25px;
-    font-family: "Futura New", sans-serif;
-    font-weight: 900;
-    font-style: italic;
-    margin: 0 0 1em;
-    line-height: 1.3em
-}
+/*.modal-content .h3, .modal-content h3 {*/
+/*    text-align: center;*/
+/*    text-transform: none;*/
+/*    font-size: 25px;*/
+/*    font-family: "Futura New", sans-serif;*/
+/*    font-weight: 900;*/
+/*    font-style: italic;*/
+/*    margin: 0 0 1em;*/
+/*    line-height: 1.3em*/
+/*}*/
 
-.modal-content .h3.warning, .modal-content h3.warning {
-    color: #ffe512
-}
+/*.modal-content .h3.warning, .modal-content h3.warning {*/
+/*    color: #ffe512*/
+/*}*/
 
-.modal-content .h3.danger, .modal-content h3.danger {
-    color: #c51437;
-    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff
-}
+/*.modal-content .h3.danger, .modal-content h3.danger {*/
+/*    color: #c51437;*/
+/*    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff*/
+/*}*/
 
-.modal-content .h4, .modal-content h4 {
-    text-align: center;
-    text-transform: none;
-    font-size: 20px;
-    margin: 0;
-    line-height: 1.3em;
-    font-family: "Proxima Nova Condensed";
-    font-weight: 900;
-    font-style: italic;
-    letter-spacing: 1px
-}
+/*.modal-content .h4, .modal-content h4 {*/
+/*    text-align: center;*/
+/*    text-transform: none;*/
+/*    font-size: 20px;*/
+/*    margin: 0;*/
+/*    line-height: 1.3em;*/
+/*    font-family: "Proxima Nova Condensed";*/
+/*    font-weight: 900;*/
+/*    font-style: italic;*/
+/*    letter-spacing: 1px*/
+/*}*/
 
-.modal-content .h4.warning, .modal-content h4.warning {
-    color: #ffe512
-}
+/*.modal-content .h4.warning, .modal-content h4.warning {*/
+/*    color: #ffe512*/
+/*}*/
 
-.modal-content .h4.danger, .modal-content h4.danger {
-    color: #c51437;
-    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff
-}
+/*.modal-content .h4.danger, .modal-content h4.danger {*/
+/*    color: #c51437;*/
+/*    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff*/
+/*}*/
 
-.modal-content .h5, .modal-content h5 {
-    text-align: center;
-    text-transform: none;
-    font-size: 17px;
-    margin: 0;
-    line-height: 1.25em;
-    color: #7099c1;
-    font-family: "Futura New", sans-serif;
-    font-weight: 800;
-    font-style: italic
-}
+/*.modal-content .h5, .modal-content h5 {*/
+/*    text-align: center;*/
+/*    text-transform: none;*/
+/*    font-size: 17px;*/
+/*    margin: 0;*/
+/*    line-height: 1.25em;*/
+/*    color: #7099c1;*/
+/*    font-family: "Futura New", sans-serif;*/
+/*    font-weight: 800;*/
+/*    font-style: italic*/
+/*}*/
 
-.modal-content .h5.warning, .modal-content h5.warning {
-    color: #ffe512
-}
+/*.modal-content .h5.warning, .modal-content h5.warning {*/
+/*    color: #ffe512*/
+/*}*/
 
-.modal-content .h5.danger, .modal-content h5.danger {
-    color: #c51437;
-    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff
-}
+/*.modal-content .h5.danger, .modal-content h5.danger {*/
+/*    color: #c51437;*/
+/*    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff*/
+/*}*/
 
-.modal-content .danger {
-    color: #c51437
-}
+/*.modal-content .danger {*/
+/*    color: #c51437*/
+/*}*/
 
-.modal-content .m-0 {
-    margin: 0
-}
+/*.modal-content .m-0 {*/
+/*    margin: 0*/
+/*}*/
 
-.modal-head {
-    padding: 56px 15px 31px;
-    text-align: center
-}
+/*.modal-head {*/
+/*    padding: 56px 15px 31px;*/
+/*    text-align: center*/
+/*}*/
 
-.modal-head p {
-    font-size: 17px;
-    margin: 0
-}
+/*.modal-head p {*/
+/*    font-size: 17px;*/
+/*    margin: 0*/
+/*}*/
 
-.modal-head.with-desc {
-    padding-bottom: 25px
-}
+/*.modal-head.with-desc {*/
+/*    padding-bottom: 25px*/
+/*}*/
 
-.modal-head.with-desc .h2 {
-    margin-bottom: .2em
-}
+/*.modal-head.with-desc .h2 {*/
+/*    margin-bottom: .2em*/
+/*}*/
 
-.modal-head.p-sm {
-    padding-bottom: 0;
-    padding-top: 45px
-}
+/*.modal-head.p-sm {*/
+/*    padding-bottom: 0;*/
+/*    padding-top: 45px*/
+/*}*/
 
-.modal-body {
-    padding: 0 15px 50px
-}
+/*.modal-body {*/
+/*    padding: 0 15px 50px*/
+/*}*/
 
-.modal-body.pb-sm {
-    padding-bottom: 30px
-}
+/*.modal-body.pb-sm {*/
+/*    padding-bottom: 30px*/
+/*}*/
 
-.modal-body a {
-    text-decoration: underline
-}
+/*.modal-body a {*/
+/*    text-decoration: underline*/
+/*}*/
 
-.modal-body a:hover {
-    text-decoration: none
-}
+/*.modal-body a:hover {*/
+/*    text-decoration: none*/
+/*}*/
 
-.modal-body .message {
-    text-align: center;
-    margin: 0 auto 20px;
-    line-height: 1.6em;
-    font-size: 25px;
-    max-width: 445px
-}
+/*.modal-body .message {*/
+/*    text-align: center;*/
+/*    margin: 0 auto 20px;*/
+/*    line-height: 1.6em;*/
+/*    font-size: 25px;*/
+/*    max-width: 445px*/
+/*}*/
 
-.modal-body .message.bold {
-    font-weight: 900;
-    line-height: 1.2em;
-    letter-spacing: .5px
-}
+/*.modal-body .message.bold {*/
+/*    font-weight: 900;*/
+/*    line-height: 1.2em;*/
+/*    letter-spacing: .5px*/
+/*}*/
 
-.modal-body .message.bold a {
-    text-transform: uppercase
-}
+/*.modal-body .message.bold a {*/
+/*    text-transform: uppercase*/
+/*}*/
 
-.modal-body .message .h2 {
-    font-weight: 700;
-    text-transform: uppercase
-}
+/*.modal-body .message .h2 {*/
+/*    font-weight: 700;*/
+/*    text-transform: uppercase*/
+/*}*/
 
-.modal-body .message .h3 {
-    font-weight: 700;
-    text-transform: none
-}
+/*.modal-body .message .h3 {*/
+/*    font-weight: 700;*/
+/*    text-transform: none*/
+/*}*/
 
-.modal-body .form {
-    max-width: 424px;
-    margin: 0 auto
-}
+/*.modal-body .form {*/
+/*    max-width: 424px;*/
+/*    margin: 0 auto*/
+/*}*/
 
 .star-1 {
     animation: glitter 2.5s linear 0s infinite normal;
