--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -144,678 +144,118 @@ a {
 
 
 
-
-main {
-    -ms-flex-item-align: center;
-    -webkit-align-self: center;
-    align-self: center
-}
-
-
-
-/*.steps-wrap {*/
-/*    color: #fff;*/
-/*    position: absolute;*/
-/*    bottom: 0;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    width: 100%;*/
-/*    background-color: #00b8f4*/
-/*}*/
-
-/*.steps {*/
-/*    display: -webkit-flex;*/
-/*    display: -ms-flexbox;*/
-/*    display: flex;*/
-/*    -webkit-justify-content: flex-end;*/
-/*    -ms-flex-pack: end;*/
-/*    justify-content: flex-end;*/
-/*    color: #0066ca;*/
-/*    margin-bottom: 13px;*/
-/*    margin-top: -20px;*/
-/*    margin-right: -2px;*/
-/*    padding: 5px 7% 25px 0;*/
-/*    position: relative;*/
-/*    -webkit-transform-origin: center right;*/
-/*    -ms-transform-origin: center right;*/
-/*    transform-origin: center right;*/
-/*    z-index: 0*/
-/*}*/
-
-/*.steps:before {*/
-/*    content: "";*/
-/*    position: absolute;*/
-/*    width: 100%;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    bottom: 0;*/
-/*    background-color: #fff;*/
-/*    -webkit-transform: rotate(-1deg);*/
-/*    -ms-transform: rotate(-1deg);*/
-/*    transform: rotate(-1deg)*/
-/*}*/
-
-/*.steps:after {*/
-/*    content: "";*/
-/*    position: absolute;*/
-/*    width: 100%;*/
-/*    height: 16px;*/
-/*    top: -7px;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    background-color: #fff;*/
-/*    -webkit-transform: rotate(-1deg);*/
-/*    -ms-transform: rotate(-1deg);*/
-/*    transform: rotate(-1.5deg)*/
-/*}*/
-
-/*.steps__item {*/
-/*    display: -webkit-flex;*/
-/*    display: -ms-flexbox;*/
-/*    display: flex;*/
-/*    -webkit-flex-direction: column;*/
-/*    -ms-flex-direction: column;*/
-/*    flex-direction: column;*/
-/*    position: relative*/
-/*}*/
-
-/*.steps__item .steps__text {*/
-/*    margin-left: 40px*/
-/*}*/
-
-/*.steps__item:nth-child(1) {*/
-/*    padding-right: 51px;*/
-/*    -webkit-transform: translateY(13px);*/
-/*    -ms-transform: translateY(13px);*/
-/*    transform: translateY(13px)*/
-/*}*/
-
-/*.steps__item:nth-child(1) .steps__text {*/
-/*    margin-left: 36px*/
-/*}*/
-
-/*.steps__item:nth-child(2) {*/
-/*    padding-right: 17px*/
-/*}*/
-
-/*.steps__item:nth-child(2) .steps__text {*/
-/*    margin-left: 70px*/
-/*}*/
-
-/*.steps__item:nth-child(3) {*/
-/*    margin-top: -3px*/
-/*}*/
-
-/*.steps__item:nth-child(3) .steps__text {*/
-/*    margin-left: 86px*/
-/*}*/
-
-/*.steps__name {*/
-/*    display: -webkit-flex;*/
-/*    display: -ms-flexbox;*/
-/*    display: flex;*/
-/*    -webkit-align-items: flex-end;*/
-/*    -ms-flex-align: end;*/
-/*    align-items: flex-end;*/
-/*    font-size: 25px;*/
-/*    line-height: 30px;*/
-/*    font-weight: 800;*/
-/*    text-transform: uppercase*/
-/*}*/
-
-/*.steps__name span:first-child {*/
-/*    font-size: 45px;*/
-/*    margin-bottom: 8px*/
-/*}*/
-
-/*.steps__name span:last-child {*/
-/*    margin-left: 5px*/
-/*}*/
-
-/*.steps__name img {*/
-/*    display: block;*/
-/*    width: 100%*/
-/*}*/
-
-/*.steps__text {*/
-/*    font-size: 26px;*/
-/*    -webkit-transform: translateY(-10px);*/
-/*    -ms-transform: translateY(-10px);*/
-/*    transform: translateY(-10px)*/
-/*}*/
-
-/*.steps__images {*/
-/*    display: -webkit-flex;*/
-/*    display: -ms-flexbox;*/
-/*    display: flex;*/
-/*    -webkit-align-items: center;*/
-/*    -ms-flex-align: center;*/
-/*    align-items: center;*/
-/*    margin-left: 34px*/
-/*}*/
-
-/*.steps__images img {*/
-/*    max-height: 35px*/
-/*}*/
-
-/*.steps__images img + img {*/
-/*    margin-left: 4px*/
-/*}*/
-
-/*.text {*/
-/*    padding: 10px 15px 15px 38%;*/
-/*    font-size: 12px*/
-/*}*/
-
-/*.bg-lines:before {*/
-/*    content: "";*/
-/*    position: absolute;*/
-/*    width: 110%;*/
-/*    top: -16px;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    height: 40px;*/
-/*    background-color: #0066ca;*/
-/*    -webkit-transform: rotate(-1.7deg);*/
-/*    -ms-transform: rotate(-1.7deg);*/
-/*    transform: rotate(-2.2deg);*/
-/*    z-index: -1*/
-/*}*/
-
-/*.bg-lines:after {*/
-/*    content: "";*/
-/*    position: absolute;*/
-/*    width: 110%;*/
-/*    top: -20px;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    height: 40px;*/
-/*    background-color: red;*/
-/*    -webkit-transform: rotate(-2.2deg);*/
-/*    -ms-transform: rotate(-2.2deg);*/
-/*    transform: rotate(-2.8deg);*/
-/*    z-index: -2*/
-/*}*/
-/*.key-red-bg {*/
-/*  position: absolute;*/
-/*  left: 12px;*/
-/*  top: 21px;*/
-/*  bottom: 0;*/
-/*  right: 0;*/
-/*  background: url(../assets/images/code-btn/red-bg.png) center center no-repeat;*/
-/*  z-index: -1;*/
-/*  transition: all .3s*/
-/*}*/
-
-/*.key-blue-bg {*/
-/*  position: absolute;*/
-/*  left: -25px;*/
-/*  top: -17px;*/
-/*  bottom: 0;*/
-/*  right: 0;*/
-/*  background: url(../assets/images/code-btn/blue-bg.png) center center no-repeat;*/
-/*  z-index: -1;*/
-/*  transition: all .3s*/
-/*}*/
-
-
-.light {
-    position: absolute;
-    z-index: 2;
-    top: 23%;
-    left: -20%;
-    width: 97%;
-    opacity: 0
-}
-
-.girl-image {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 98;
-    width: 45.7%;
-    -webkit-transform-origin: bottom left;
-    -ms-transform-origin: bottom left;
-    transform-origin: bottom left
-}
-
-/*.modal-open {*/
-/*    overflow: hidden*/
-/*}*/
-
-/*.modal-open .modal {*/
-/*    overflow-x: hidden;*/
-/*    overflow-y: auto*/
-/*}*/
-
-/*.modal {*/
-/*    position: fixed;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    z-index: 1050;*/
-/*    display: none;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    overflow: hidden;*/
-/*    outline: 0*/
-/*}*/
-
-/*.modal-dialog {*/
-/*    position: relative;*/
-/*    pointer-events: none;*/
-/*    max-width: 515px;*/
-/*    margin: .5rem auto*/
-/*}*/
-
-/*.modal-dialog.modal-dialog-big {*/
-/*    max-width: 920px*/
-/*}*/
-
-/*.modal-dialog-centered {*/
-/*    display: -ms-flexbox;*/
-/*    display: -webkit-flex;*/
-/*    display: flex;*/
-/*    -ms-flex-align: center;*/
-/*    -webkit-align-items: center;*/
-/*    align-items: center;*/
-/*    min-height: calc(100% - (.5rem * 2));*/
-/*    margin: .5rem auto*/
-/*}*/
-
-/*.modal-backdrop {*/
-/*    position: fixed;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    z-index: 1040;*/
-/*    width: 100vw;*/
-/*    height: 100vh;*/
-/*    background-color: #004990;*/
-/*    transition-duration: .2s*/
-/*}*/
-
-/*.modal-backdrop.fade {*/
-/*    opacity: 0*/
-/*}*/
-
-/*.modal-backdrop.show {*/
-/*    opacity: .7*/
-/*}*/
-
-/*.modal button.close {*/
-/*    position: absolute;*/
-/*    top: 17px;*/
-/*    right: 7px;*/
-/*    width: 21px;*/
-/*    height: 21px;*/
-/*    margin: 0;*/
-/*    opacity: 1;*/
-/*    background: #fff;*/
-/*    border: none;*/
-/*    border-radius: 50%;*/
-/*    z-index: 10;*/
-/*    transition-duration: .2s;*/
-/*    font-family: "Proxima Nova Condensed";*/
-/*    font-weight: 900;*/
-/*    font-style: italic;*/
-/*    font-size: 28px;*/
-/*    text-align: center;*/
-/*    line-height: 21px;*/
-/*    color: #c51437;*/
-/*    padding-top: 1px;*/
-/*    padding-right: 1px*/
-/*}*/
-
-/*.modal button.close:hover {*/
-/*    opacity: .9*/
-/*}*/
-
-/*.modal-content {*/
-/*    position: relative;*/
-/*    display: -ms-flexbox;*/
-/*    display: -webkit-flex;*/
-/*    display: flex;*/
-/*    -ms-flex-direction: column;*/
-/*    -webkit-flex-direction: column;*/
-/*    flex-direction: column;*/
-/*    width: 100%;*/
-/*    pointer-events: auto;*/
-/*    background-clip: padding-box;*/
-/*    outline: 0*/
-/*}*/
-
-/*.modal-content:after, .modal-content:before {*/
-/*    content: "";*/
-/*    position: absolute;*/
-/*    border-radius: 20px;*/
-/*    -webkit-transform-origin: center center;*/
-/*    -ms-transform-origin: center center;*/
-/*    transform-origin: center center*/
-/*}*/
-
-/*.modal-content:before {*/
-/*    top: -8px;*/
-/*    bottom: -8px;*/
-/*    left: -9px;*/
-/*    right: -9px;*/
-/*    z-index: 1;*/
-/*    background: #fff;*/
-/*    -webkit-transform: skew(1deg, -.3deg);*/
-/*    -ms-transform: skew(1deg, -.3deg);*/
-/*    transform: skew(1deg, -.3deg)*/
-/*}*/
-
-/*.modal-content:after {*/
-/*    left: -1px;*/
-/*    right: -1px;*/
-/*    top: 5px;*/
-/*    bottom: 5px;*/
-/*    z-index: 3;*/
-/*    background: #004990;*/
-/*    -webkit-transform: skewY(.8deg);*/
-/*    -ms-transform: skewY(.8deg);*/
-/*    transform: skewY(.8deg)*/
-/*}*/
-
-/*.modal-content > div {*/
-/*    position: relative;*/
-/*    z-index: 5*/
-/*}*/
-
-/*.modal-content .h2, .modal-content h2 {*/
-/*    text-align: center;*/
-/*    text-transform: uppercase;*/
-/*    font-size: 25px;*/
-/*    font-family: "Futura New", sans-serif;*/
-/*    font-weight: 800;*/
-/*    font-style: italic;*/
-/*    margin: 0 0 .8em;*/
-/*    line-height: 1.3em;*/
-/*    color: #fff*/
-/*}*/
-
-/*.modal-content .h2.warning, .modal-content h2.warning {*/
-/*    color: #ffe512*/
-/*}*/
-
-/*.modal-content .h2.danger, .modal-content h2.danger {*/
-/*    margin: 0;*/
-/*    color: #c51437;*/
-/*    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff*/
-/*}*/
-
-/*.modal-content .h3, .modal-content h3 {*/
-/*    text-align: center;*/
-/*    text-transform: none;*/
-/*    font-size: 25px;*/
-/*    font-family: "Futura New", sans-serif;*/
-/*    font-weight: 900;*/
-/*    font-style: italic;*/
-/*    margin: 0 0 1em;*/
-/*    line-height: 1.3em*/
-/*}*/
-
-/*.modal-content .h3.warning, .modal-content h3.warning {*/
-/*    color: #ffe512*/
-/*}*/
-
-/*.modal-content .h3.danger, .modal-content h3.danger {*/
-/*    color: #c51437;*/
-/*    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff*/
-/*}*/
-
-/*.modal-content .h4, .modal-content h4 {*/
-/*    text-align: center;*/
-/*    text-transform: none;*/
-/*    font-size: 20px;*/
-/*    margin: 0;*/
-/*    line-height: 1.3em;*/
-/*    font-family: "Proxima Nova Condensed";*/
-/*    font-weight: 900;*/
-/*    font-style: italic;*/
-/*    letter-spacing: 1px*/
-/*}*/
-
-/*.modal-content .h4.warning, .modal-content h4.warning {*/
-/*    color: #ffe512*/
-/*}*/
-
-/*.modal-content .h4.danger, .modal-content h4.danger {*/
-/*    color: #c51437;*/
-/*    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff*/
-/*}*/
-
-/*.modal-content .h5, .modal-content h5 {*/
-/*    text-align: center;*/
-/*    text-transform: none;*/
-/*    font-size: 17px;*/
-/*    margin: 0;*/
-/*    line-height: 1.25em;*/
-/*    color: #7099c1;*/
-/*    font-family: "Futura New", sans-serif;*/
-/*    font-weight: 800;*/
-/*    font-style: italic*/
-/*}*/
-
-/*.modal-content .h5.warning, .modal-content h5.warning {*/
-/*    color: #ffe512*/
-/*}*/
-
-/*.modal-content .h5.danger, .modal-content h5.danger {*/
-/*    color: #c51437;*/
-/*    text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff*/
-/*}*/
-
-/*.modal-content .danger {*/
-/*    color: #c51437*/
-/*}*/
-
-/*.modal-content .m-0 {*/
-/*    margin: 0*/
-/*}*/
-
-/*.modal-head {*/
-/*    padding: 56px 15px 31px;*/
-/*    text-align: center*/
-/*}*/
-
-/*.modal-head p {*/
-/*    font-size: 17px;*/
-/*    margin: 0*/
-/*}*/
-
-/*.modal-head.with-desc {*/
-/*    padding-bottom: 25px*/
-/*}*/
-
-/*.modal-head.with-desc .h2 {*/
-/*    margin-bottom: .2em*/
-/*}*/
-
-/*.modal-head.p-sm {*/
-/*    padding-bottom: 0;*/
-/*    padding-top: 45px*/
-/*}*/
-
-/*.modal-body {*/
-/*    padding: 0 15px 50px*/
-/*}*/
-
-/*.modal-body.pb-sm {*/
-/*    padding-bottom: 30px*/
-/*}*/
-
-/*.modal-body a {*/
-/*    text-decoration: underline*/
-/*}*/
-
-/*.modal-body a:hover {*/
-/*    text-decoration: none*/
-/*}*/
-
-/*.modal-body .message {*/
-/*    text-align: center;*/
-/*    margin: 0 auto 20px;*/
-/*    line-height: 1.6em;*/
-/*    font-size: 25px;*/
-/*    max-width: 445px*/
-/*}*/
-
-/*.modal-body .message.bold {*/
-/*    font-weight: 900;*/
-/*    line-height: 1.2em;*/
-/*    letter-spacing: .5px*/
-/*}*/
-
-/*.modal-body .message.bold a {*/
-/*    text-transform: uppercase*/
-/*}*/
-
-/*.modal-body .message .h2 {*/
-/*    font-weight: 700;*/
-/*    text-transform: uppercase*/
-/*}*/
-
-/*.modal-body .message .h3 {*/
-/*    font-weight: 700;*/
-/*    text-transform: none*/
-/*}*/
-
-/*.modal-body .form {*/
-/*    max-width: 424px;*/
-/*    margin: 0 auto*/
-/*}*/
-
 .star-1 {
-    animation: glitter 2.5s linear 0s infinite normal;
-    -webkit-animation: glitter 2.5s linear 0s infinite normal;
-    -moz-animation: glitter 2.5s linear 0s infinite normal;
-    -ms-animation: glitter 2.5s linear 0s infinite normal;
-    -o-animation: glitter 2.5s linear 0s infinite normal
+    animation: glitter 4.5s linear 0s infinite normal;
+    -webkit-animation: glitter 4.5s linear 0s infinite normal;
+    -moz-animation: glitter 4.5s linear 0s infinite normal;
+    -ms-animation: glitter 4.5s linear 0s infinite normal;
+    -o-animation: glitter 4.5s linear 0s infinite normal;
 }
-
 .star-2 {
-    animation: glitter_2 2.5s linear 0s infinite normal;
-    -webkit-animation: glitter_2 2.5s linear 0s infinite normal;
-    -moz-animation: glitter_2 2.5s linear 0s infinite normal;
-    -ms-animation: glitter_2 2.5s linear 0s infinite normal;
-    -o-animation: glitter_2 2.5s linear 0s infinite normal
+    animation: glitter_2 4.5s linear 0s infinite normal;
+    -webkit-animation: glitter_2 4.5s linear 0s infinite normal;
+    -moz-animation: glitter_2 4.5s linear 0s infinite normal;
+    -ms-animation: glitter_2 4.5s linear 0s infinite normal;
+    -o-animation: glitter_2 4.5s linear 0s infinite normal;
 }
-
 .star-3 {
-    animation: glitter_2 2.5s linear 0s infinite normal;
-    -webkit-animation: glitter_2 2.5s linear 0s infinite normal;
-    -moz-animation: glitter_2 2.5s linear 0s infinite normal;
-    -ms-animation: glitter_2 2.5s linear 0s infinite normal;
-    -o-animation: glitter_2 2.5s linear 0s infinite normal;
-    -webkit-animation-delay: .3s;
-    animation-delay: .3s
+    animation: glitter_2 4.5s linear 0s infinite normal;
+    -webkit-animation: glitter_2 4.5s linear 0s infinite normal;
+    -moz-animation: glitter_2 4.5s linear 0s infinite normal;
+    -ms-animation: glitter_2 4.5s linear 0s infinite normal;
+    -o-animation: glitter_2 4.5s linear 0s infinite normal;
+    animation-delay: 0.3s;
 }
-
 .star-4 {
-    animation: glitter_2 2.5s linear 0s infinite normal;
-    -webkit-animation: glitter_2 2.5s linear 0s infinite normal;
-    -moz-animation: glitter_2 2.5s linear 0s infinite normal;
-    -ms-animation: glitter_2 2.5s linear 0s infinite normal;
-    -o-animation: glitter_2 2.5s linear 0s infinite normal;
-    -webkit-animation-delay: .5s;
-    animation-delay: .5s
+    animation: glitter_2 4.5s linear 0s infinite normal;
+    -webkit-animation: glitter_2 4.5s linear 0s infinite normal;
+    -moz-animation: glitter_2 4.5s linear 0s infinite normal;
+    -ms-animation: glitter_2 4.5s linear 0s infinite normal;
+    -o-animation: glitter_2 4.5s linear 0s infinite normal;
+    animation-delay: 0.5s;
 }
-
 .star-5 {
-    animation: glitter_2 2.5s linear 0s infinite normal;
-    -webkit-animation: glitter_2 2.5s linear 0s infinite normal;
-    -moz-animation: glitter_2 2.5s linear 0s infinite normal;
-    -ms-animation: glitter_2 2.5s linear 0s infinite normal;
-    -o-animation: glitter_2 2.5s linear 0s infinite normal;
-    -webkit-animation-delay: .3s;
-    animation-delay: .3s
+    animation: glitter_2 4.5s linear 0s infinite normal;
+    -webkit-animation: glitter_2 4.5s linear 0s infinite normal;
+    -moz-animation: glitter_2 4.5s linear 0s infinite normal;
+    -ms-animation: glitter_2 4.5s linear 0s infinite normal;
+    -o-animation: glitter_2 4.5s linear 0s infinite normal;
+    animation-delay: 0.3s;
 }
-
 .star-6 {
-    animation: glitter 2.5s linear 0s infinite normal;
-    -webkit-animation: glitter 2.5s linear 0s infinite normal;
-    -moz-animation: glitter 2.5s linear 0s infinite normal;
-    -ms-animation: glitter 2.5s linear 0s infinite normal;
-    -o-animation: glitter 2.5s linear 0s infinite normal;
-    -webkit-animation-delay: .1s;
-    animation-delay: .1s
+    animation: glitter 4.5s linear 0s infinite normal;
+    -webkit-animation: glitter 4.5s linear 0s infinite normal;
+    -moz-animation: glitter 4.5s linear 0s infinite normal;
+    -ms-animation: glitter 4.5s linear 0s infinite normal;
+    -o-animation: glitter 4.5s linear 0s infinite normal;
+    animation-delay: 0.1s;
 }
-
 .star-7 {
-    animation: glitter_2 2.5s linear 0s infinite normal;
-    -webkit-animation: glitter_2 2.5s linear 0s infinite normal;
-    -moz-animation: glitter_2 2.5s linear 0s infinite normal;
-    -ms-animation: glitter_2 2.5s linear 0s infinite normal;
-    -o-animation: glitter_2 2.5s linear 0s infinite normal;
-    -webkit-animation-delay: .2s;
-    animation-delay: .2s
+    animation: glitter 4.5s linear 0s infinite normal;
+    -webkit-animation: glitter 4.5s linear 0s infinite normal;
+    -moz-animation: glitter 4.5s linear 0s infinite normal;
+    -ms-animation: glitter 4.5s linear 0s infinite normal;
+    -o-animation: glitter 4.5s linear 0s infinite normal;
+    animation-delay: 0.2s;
 }
-
 .star-8 {
-    animation: glitter 2.5s linear 0s infinite normal;
-    -webkit-animation: glitter 2.5s linear 0s infinite normal;
-    -moz-animation: glitter 2.5s linear 0s infinite normal;
-    -ms-animation: glitter 2.5s linear 0s infinite normal;
-    -o-animation: glitter 2.5s linear 0s infinite normal;
-    -webkit-animation-delay: .2s;
-    animation-delay: .2s
+    animation: glitter_2 4.5s linear 0s infinite normal;
+    -webkit-animation: glitter_2 4.5s linear 0s infinite normal;
+    -moz-animation: glitter_2 4.5s linear 0s infinite normal;
+    -ms-animation: glitter_2 4.5s linear 0s infinite normal;
+    -o-animation: glitter_2 4.5s linear 0s infinite normal;
+    animation-delay: 0.2s;
 }
-
 .star-9 {
-    animation: glitter 2.5s linear 0s infinite normal;
-    -webkit-animation: glitter 2.5s linear 0s infinite normal;
-    -moz-animation: glitter 2.5s linear 0s infinite normal;
-    -ms-animation: glitter 2.5s linear 0s infinite normal;
-    -o-animation: glitter 2.5s linear 0s infinite normal;
-    -webkit-animation-delay: .5s;
-    animation-delay: .5s
+    animation: glitter 4.5s linear 0s infinite normal;
+    -webkit-animation: glitter 4.5s linear 0s infinite normal;
+    -moz-animation: glitter 4.5s linear 0s infinite normal;
+    -ms-animation: glitter 4.5s linear 0s infinite normal;
+    -o-animation: glitter 4.5s linear 0s infinite normal;
+    animation-delay: 0.5s;
+}
+.star-10 {
+    animation: glitter_2 4.5s linear 0s infinite normal;
+    -webkit-animation: glitter_2 4.5s linear 0s infinite normal;
+    -moz-animation: glitter_2 4.5s linear 0s infinite normal;
+    -ms-animation: glitter_2 4.5s linear 0s infinite normal;
+    -o-animation: glitter_2 4.5s linear 0s infinite normal;
+    animation-delay: 0.5s;
 }
 
 
 @-webkit-keyframes glitter {
     0% {
         -webkit-transform: scale(1);
-        opacity: 1
     }
     25% {
-        -webkit-transform: scale(.5);
-        opacity: 0
+        -webkit-transform: scale(0.1);
     }
     50% {
         -webkit-transform: scale(1);
-        opacity: 1
     }
     75% {
-        -webkit-transform: scale(.5);
-        opacity: 0
+        -webkit-transform: scale(0.1);
     }
     100% {
         -webkit-transform: scale(1);
-        opacity: 1
     }
 }
-
 @-webkit-keyframes glitter_2 {
     0% {
-        -webkit-transform: scale(.5);
-        opacity: 0
+        -webkit-transform: scale(0.1);
     }
     25% {
         -webkit-transform: scale(1);
-        opacity: 1
     }
     50% {
-        -webkit-transform: scale(.5);
-        opacity: 0
+        -webkit-transform: scale(0.1);
     }
     75% {
         -webkit-transform: scale(1);
-        opacity: 1
     }
     100% {
-        -webkit-transform: scale(.5);
-        opacity: 0
+        -webkit-transform: scale(0.1);
     }
 }
 
